--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.database = MYSQL
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
-spring.datasource.url=jdbc:mysql://localhost:3306/blackjack?createDatabaseIfNotExist=true;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:mysql://localhost:3306/blackjack?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -15,6 +15,14 @@ spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # Do not initialize anything
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=trace
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.properties.hibernate.type=trace
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.datasource.initialize=false
 #spring.datasource.schema=classpath:/schema.sql
 #spring.datasource.data=classpath:/data.sql
@@ -37,3 +45,4 @@ spring.jpa.hibernate.ddl-auto=create
 
 # Tomcat
 server.port=8181
+server.servlet-path=/api
